--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install the current version of `MovementSync` from Github by
+You can install the current version of `movementsync` from Github by
 entering the following commands into R:
 
 ```{r,eval=FALSE}
