--- a/README.Rmd
+++ b/README.Rmd
@@ -34,3 +34,5 @@ devtools::install_github("paulemms/movementsync")
 library(movementsync)
 packageVersion("movementsync")                                                        ```
                                                                                         
+There are R scripts in the [samplescripts](inst/samplescripts) directory that walk-through the package functionality.
+
