--- a/inst/samplescripts/TODO.txt
+++ b/inst/samplescripts/TODO.txt
@@ -1,11 +1,25 @@
-# QUERIES
-# Applying filters can cause interior NAs for some data points e.g. Ear NIR_ABh_Puriya
+# TODO
+# Martin Word Doc 10122022 Section 1
+# Martin Word Doc 10122022 Section 2
+# Martin Word Doc 10122022 Section 3
+# Martin Word Doc 10122022 Section 4
+# Add function for wavelet power vs time
+# motiongram - displacement gives velocity - include in data prep walkthrough
+# Add periodicity FFT plot to data analysis walkthrough
+# Package checks (include documentation)
+# Look at some possible conditional granger implementations - modify lmtest?
+# If interior NAs in filter issue warning and interpolate
+# Check splice data.frames really are Splice objects in functions
+# Splicing for proportion of interval on metre objects
+# Option for arrows both ways on influencing plots
+# Periodicity - restrict time domain, windowed 10s version
+# Order onsetselected data
+# Generalise autolayer to accept parameters or expr - done for splice_time.Duration - others?
 
 # DONE
+# Martin Word Doc 10122022 Section 5 - no interpolation on feature data
 # Infer wavelet the relative phase of two ts - autolayer overlays on window plot, add reference lines to
 # function call, phase angle degrees in summary
-
-
 # Moved walk-through scripts to inst directory
 # Changed in naming on data files - NS to Pose - uploaded new data to Google drive
 # If data 3D use _z cordinate then calculate d for both processed and filtered data
@@ -26,24 +40,4 @@
 # Lags in seconds in Granger code are rounded to nearest frame
 # Other signal filters can be applied to processed data now
 
-
-# TODO
-# Package checks (include documentation)
-# Look at some possible conditional granger implementations - modify lmtest?
-# If interior NAs in filter issue warning and interpolate
-
-# Check splice data.frames really are Splice objects in functions
-# Splicing for proportion of interval on metre objects
-# Option for arrows both ways on influencing plots
-# Longer time spans for network diagram, - Filter on harmonium in network diagrams
-# Limit colour to panels for GrangerTime - currently in script - improve function?
-# wrist (faster) and nose focus as points -lag over a second, 2 or 3 seconds nose
-# motiongram - displacement gives velocity
-# * Added periodicity FFT plot - yet to do windowing
-# grangers - extension - stats ?, vars, lmtest - tables - p number against time
-# periodicity - restrict time domain, windowed 10s version
-# overlay audio onto video - autolayers - test on last performance - stack the rects for inst?
-# gganimate? https://rpubs.com/jedoenriquez/animatingchartsintro - on processed
-# order onsetselected data
-# Generalise autolayer to accept parameters or expr - done for Duration - others?
 
