--- a/inst/samplescripts/TODO.txt
+++ b/inst/samplescripts/TODO.txt
@@ -1,22 +1,24 @@
 # TODO
-# Add periodicity FFT plot to data analysis walkthrough
-# motiongram - displacement gives velocity - include in data prep walkthrough
 # Martin Word Doc 10122022 Section 1
+# If interior NAs in filter issue warning and interpolate
 # Martin Word Doc 10122022 Section 2
 # Martin Word Doc 10122022 Section 3
 # Martin Word Doc 10122022 Section 4
 # Package checks (include documentation) - add man pages
 # Look at some possible conditional granger implementations - modify lmtest?
-# If interior NAs in filter issue warning and interpolate
+# See Martin email on modification of Metre object for Tempo
 # Check splice data.frames really are Splice objects in functions
 # Splicing for proportion of interval on metre objects
 # Option for arrows both ways on influencing plots
 # Periodicity - restrict time domain, windowed 10s version
 # Order onsetselected data
 # Generalise autolayer to accept parameters or expr - done for splice_time.Duration - others?
-# Martin Word Doc 10122022 Section 5 - no interpolation on feature data - interpolate feature default off.
+# Single time series autoplot has z axis label see section 5.
 
 # DONE
+# Added periodicity FFT plot to data analysis walkthrough
+# Added motiongram plots to data prep walkthrough
+# Martin Word Doc 10122022 Section 5 - added interpolate feature which is by default off.
 # Fixed Metre default plot at end
 # Added function for wavelet power vs time - included in walkthrough script
 # Infer wavelet the relative phase of two ts - autolayer overlays on window plot, add reference lines to
