Added ave power on segments plots

--- a/inst/samplescripts/TODO.txt
+++ b/inst/samplescripts/TODO.txt
@@ -1,20 +1,30 @@
+# QUERY
+
 # TODO
-# Add conditional granger implementations by modifying lmtest.
-# Option for arrows both ways on influencing plots
-# Update the show_plot type graphs to have similar features to other plots - see ave_power_spliceview
-# Martin Word Doc 10122022 Section 1
-# Martin Word Doc 10122022 Section 2
-# Martin Word Doc 10122022 Section 3
+
 # Martin Word Doc 10122022 Section 4
+# Plot of segments average power facetted (options to show)
+# Sample from one splitview and plot average power distribution using sampling
+# Splicing for proportion of interval on metre objects
+# Martin Word Doc 10122022 Section 2
+# Martin Word Doc 10122022 Section 1
+# Martin Word Doc 10122022 Section 3
+# Update the show_plot type graphs to have similar features to other plots - see ave_power_spliceview
 # See Martin email on modification of Metre object for Tempo
 # Check splice data.frames really are Splice objects in functions
-# Splicing for proportion of interval on metre objects
 # Order onsetselected data
 # Generalise autolayer to accept parameters or expr - done for splice_time.Duration - others?
 # Single time series autoplot has z axis label see section 5.
 
 # DONE
+# Ignored first and last beat for windowing - remove consecutive_tactus flag.
+# TRUE default for two arrows in influencing diagram.
+# Added option to window Metre on proportion gap.
+# Used history of Z in conditional Granger
 # Package checks (include documentation) - add man pages
+# Option for arrows both ways on influencing plots
+# Use unquoted expr in autolayer.Duration to be consistent with subset.
+# Added conditional granger implementation by modifying lmtest.
 # Only applied filters to interior numeric data - added unit test
 # Add time_limits to autoplots and autolayers - done duration layer and onsetsselected
 # Replace Tala by Metre for beat in function calls and plots
