--- a/README.Rmd
+++ b/README.Rmd
@@ -34,6 +34,13 @@ devtools::install_github("paulemms/movementsync")
 library(movementsync)
 packageVersion("movementsync")
 ```
+
+From a fresh install of the package, you can get the `Original` set of five recordings from OSF
+using the following function: 
+
+```{r, message=FALSE, warning=FALSE, echo=TRUE, eval=FALSE}
+get_osf_recording()
+```
                                                                                         
-There are R scripts in the [inst/samplescripts](inst/samplescripts) directory that walk-through the package functionality.
+The R scripts in the [inst/samplescripts](inst/samplescripts) directory walk-through the package functionality using these recordings.
 
