--- a/inst/samplescripts/TODO.txt
+++ b/inst/samplescripts/TODO.txt
@@ -1,21 +1,25 @@
 # QUERY
+# Force the user to enter c('NIR_ABh_Puriya', "NIRP1_VS_Hams", "NIRP1_MAK_Jaun", "Gagaku_5_Juha", "NIR_DBh_Malhar"? and node?
 
 # TODO
-# Add secondary axis for temp - put it on displacement for example
-# Fix xlim_duration plots
+# Add secondary axis for temp - put it on displacement for example - added text labels as workaround
+# Fix wavelet plots when the segment is very short
+# Add ggpairs refined plots
+# Order onsetselected data
 # Martin Word document and email 20122022
-# See Martin email on modification of Metre object for Tempo
 # OSF httr library get zip - get_osf_data(), warn if overwrite, OSFR for listing
 # Update the show_plot type graphs to have similar features to other plots - see ave_power_spliceview
 # Check splice data.frames really are Splice objects in functions
-# Order onsetselected data
-# Generalise autolayer to accept parameters or expr - done for splice_time.Duration - others?
 
 # DONE
-# Changed OSF node function to a parameter.
+# Fixed xlim_duration plots - created option to use Duration object as time_limits
+# Added tempo plot to default autoplot for Metre and a summary option
+# Spectral density x-axis in seconds not min:sec
+# Changed OSF node function to a parameter
 # Fixed visualise_sample_splices to take a list of rejection splices.
 # Did fresh R, RStudio, movementsync (it loaded dependencies), movementsync data, ran all scripts ok on old 16Gb machine.
 # Fixed single time series autoplot has z axis label see section 1.
+# Generalised autolayer to accept expr for time_limits or filtering.
 # Added gc(), dev.off() at start of scripts.
 # Martin Word Doc 10122022 Section 4
 # Martin Word Doc 10122022 Section 2
