Added GGally to imports

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,11 +41,11 @@ using the following function:
 ```{r, message=FALSE, warning=FALSE, echo=TRUE, eval=FALSE}
 get_osf_recordings()
 ```
-This function will download five zip files containing the data and extract
-the contents to a folder in your home directory.
+This function will download five zip files containing movement data and extract
+the contents to the folder `movementsync/Original` in your home directory.
                                                                                         
 The R scripts in the [inst/samplescripts](inst/samplescripts) directory walk-through the package functionality using these recordings. These scripts are installed as part of the
-package. You can see them by typing
+package. You can see them locally by typing
 
 ```{r, message=FALSE, warning=FALSE, echo=TRUE, eval=FALSE}
 open_walk_throughs()
