--- a/inst/samplescripts/TODO.txt
+++ b/inst/samplescripts/TODO.txt
@@ -5,18 +5,18 @@
 # Add secondary axis for temp - put it on displacement for example - added text labels as workaround
 # Fix wavelet time axis for plots when the segment is very short
 # Add ggpairs refined plots
-# Order onsetselected data ...
 # Martin Word document and email 20122022
-# OSF httr library get zip - get_osf_data(), warn if overwrite, OSFR for listing
-# Check splice data.frames really are Splice objects in functions
 
 # DONE
+# Ordered onsetselected facets in autoplot
+# OSF httr library get zip - get_osf_data(), warn if overwrite, OSFR for listing
 # Fixed xlim_duration plots - created option to use Duration object as time_limits
 # Added tempo plot to default autoplot for Metre and a summary option
 # Spectral density x-axis in seconds not min:sec
 # Changed OSF node function to a parameter
 # Updated the show_plot type graphs to have a segments argument to restrict facets
 # Fixed visualise_sample_splices to take a list of rejection splices.
+# Checked splice data.frames really are Splice objects in functions
 # Did fresh R, RStudio, movementsync (it loaded dependencies), movementsync data, ran all scripts ok on old 16Gb machine.
 # Fixed single time series autoplot has z axis label see section 1.
 # Generalised autolayer to accept expr for time_limits or filtering.
